2004-03-13  Danny Smith  <dannysmith@users.sourceforge.net>

	*include/wininet.h (CACHEGROUP_SEARCH_ALL, CACHEGROUP_SEARCH_BYURL):
	Add defines.
	(INTERNET_CACHE_GROUP_ADD, INTERNET_CACHE_GROUP_REMOVE): Add defines.
	(GROUPID) Add typedef.
	(INTERNET_CACHE_GROUP_INFO[AW]): Define structures.
	(CreateUrlCacheGroup): Add prototype.
	(DeleteUrlCacheGroup): Add prototype.
	(FindFirstUrlCacheGroup): Add prototype.
	(FindNextUrlCacheGroup): Add prototype.
	(GetUrlCacheGroupAttribute[AW]): Add prototypes.
	(SetUrlCacheGroupAttribute[AW]): Add prototypes.

2004-03-10  Al Slater  <al.slater@scluk.com>

	* include/winsock2.h: Add missing LPFN_ typdefs for
	function pointers.
	Clean up whitespace.

2004-03-05  Filip Navara  <xnavara@volny.cz>

	* include/ddk/scsi.h: Replace assert with ASSERT.
	* include/ddk/video.h: Ditto.
	* include/ddk/winddk.h: Ditto. Remove the assert macro.
	* include/ddk/tdi.h: Correct packing.

2004-03-04  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wtypes.h (DECIMAL_SETZERO): Add definition for
	NONAMELESSUNION case.

2004-03-03  Martin Fuchs  <martin-fuchs@gmx.net>

	* include/oleauto.h (V_UNION, V_VT, V_DECIMAL): Use
	__VARIANT_NAME_ constants.

2004-03-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/uxtheme.h: Include <commctrl.h>

2004-03-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/basetyps.h (GUID_SECT): Define to nothimg for GCC >= 2.95.

2004-03-02  Martin Fuchs  <martin-fuchs@gmx.net>

	* include/oleauto.h (VAR_VALIDDATE, VAR_FORMAT_NOSUBSTITUTE,
	VAR_FOURDIGITYEARS) Define new constants. Group VAR_*  defines
	together.
	(V_UI2, V_UI4, V_UI4REF, V_UI, V_UI8REF) Define macros.
	(V_I8, V_I8REF): Correct macros.
	(V_DECIMAL): Correct macro deginitions.
	(V_INT_PTR, V_UINT_PTR, V_INT_PTRREF, V_UINT_PTRREF): Define
	constants.
	(VTBIT_*): Define constants.
	(UDATE): Add structure definition.
	(VarDateFromUdate, VarDateFromUdateEx, VarUdateFromDate): Declare
	functions.